Added frontend for spent
